Fix footer overlap issue

--- a/_stylus/partials/_footer.styl
+++ b/_stylus/partials/_footer.styl
@@ -6,7 +6,6 @@
     width: 100%;
     /*background-color: #0b0b0b;*/
     position: relative;
-    margin-top: -25px;
 
     a{
         &:hover{
